# mudra

./: .dockerignore  .env  .eslintrc.json  .gcloudignore  .gitignore  Algorithm CNN - Image Processing (1).ipynb  Algorithm_CNN_Image_Processing.ipynb  Dockerfile  README.md  app.py  app.yaml  build.gradle  cnn_sibi.ipynb  gcloudkey.json  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.gradle  tailwind.config.js  wsgi.py
Algorithm/: CNN_Algorithm.ipynb  Feature_Extractions.ipynb
Dataset/: hands_ASL_training.csv  hands_ASL_validation.csv  hands_Bisindo_training_new.csv  hands_Bisindo_validation_new.csv  hands_SIBI_training.csv  hands_SIBI_validation.csv
Extractions Features/: Feature_Extractions.ipynb  hands_Bisindo_training_new.csv  hands_Bisindo_validation_new.csv  hands_SIBI_training.csv  hands_SIBI_validation.csv
app/: build.gradle
components/: AddCourseForm.js  ChallengeForm.js  CourseForm.js  Custom404.js  Custom404Page.js  Dashboard.js  DashboardItem.js  Date.js  DetailChallenge.js  DetailCourse.js  List.js  ListItem.js  Loading.js  LoginForm.js  Navigation.js  NavigationItem.js  RootLayout.js  layout.js
lib/: CookieHandler.js  FetchApi.js  LocalStorage.js  SendRequest.js
migrations/: 1682860504798_create-table-courses.js  1683091752470_create-table-courses.js  1683354577058_create-table-challenges.js  1683358216271_add-foreign-key-to-challenges-table.js  1683363646107_add-is-delete-field-on-table-challenges.js  1684153505126_add-column-type-to-challenges-table.js  1686559053063_create-table-authentications.js  (+1 more)
(+148 files in other folders)
